# Repository-Python-2

./: Dockerfile  Makefile  README.md  chat.py  config.py  conftest.py  consumer.py  coroutines.py  docker-compose.yaml  lesson4.py  local_files.py  main.py  mathtest.txt  models.py  multiprocessing_example.py  my_dream.txt  publisher.py  pyproject.toml  redisclient.py  redisclient2.py  test.html  test.py  test_book.py  test_book_models.py  test_library.py  test_person.py  test_utils.py  threading_example.py  utils.py  work_with_s3.py  working_with_otp.py
.github/workflows/: pytest_book_test.yaml  test-study.yaml
playground/: otp.py  working_base64.py  working_with_hash.py  working_with_passlib.py
