[tool.poetry]
name = "repository-python-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
pyotp = "^2.9.0"
pathlib = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
