[tool.poetry]
name = "repository-python-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

requires-python = ">=3.12 <4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode (>=8.0,<9.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",

    "psycopg2 (>=2.9.10,<3.0.0)"

    "psycopg2 (>=2.9.10,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)"

]


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
pyotp = "^2.9.0"
pathlib = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
